[package]
name = "dsa"
version = "0.1.0"
edition = "2024"

[dependencies]

[[example]]
name = "number_of_islands"
path = "examples/graph/number_of_islands.rs"

[[example]]
name = "rotting_oranges"
path = "examples/graph/rotting_oranges.rs"

[[example]]
name = "course_schedule_topo"
path = "examples/graph/course_schedule_topo.rs"

[[example]]
name = "course_schedule_dfs"
path = "examples/graph/course_schedule_dfs.rs"

[[example]]
name = "word_ladder"
path = "examples/graph/word_ladder.rs"

[[example]]
name = "decode_string"
path = "examples/strings_parsing_stacks/decode_string.rs"

[[example]]
name = "longest_substring_without_repeating_characters"
path = "examples/strings_parsing_stacks/longest_substring_without_repeating_characters.rs"

[[example]]
name = "3sum"
path = "examples/arrays_twopointers_slidingwindow_intervals/3sum.rs"

[[example]]
name = "product_except_self"
path = "examples/arrays_twopointers_slidingwindow_intervals/product_except_self.rs"

[[example]]
name = "subarray_sum_equals"
path = "examples/arrays_twopointers_slidingwindow_intervals/subarray_sum_equals.rs"



