[package]
name = "dsa"
version = "0.1.0"
edition = "2024"

[dependencies]

[[example]]
name = "number_of_islands"
path = "examples/graph/number_of_islands.rs"

[[example]]
name = "rotting_oranges"
path = "examples/graph/rotting_oranges.rs"

[[example]]
name = "course_schedule_topo"
path = "examples/graph/course_schedule_topo.rs"

[[example]]
name = "course_schedule_dfs"
path = "examples/graph/course_schedule_dfs.rs"

[[example]]
name = "course_schedule_2"
path = "examples/graph/course_schedule_2.rs"

[[example]]
name = "word_ladder"
path = "examples/graph/word_ladder.rs"

[[example]]
name = "alien_dictionary"
path = "examples/graph/alien_dictionary.rs"

[[example]]
name = "evaluate_division"
path = "examples/graph/evaluate_division.rs"

[[example]]
name = "accounts_merge"
path = "examples/graph/accounts_merge.rs"

[[example]]
name = "cheapest_flights_k_stops_dijkstra"
path = "examples/graph/cheapest_flights_k_stops_dijkstra.rs"

[[example]]
name = "cheapest_flights_k_stops_bf"
path = "examples/graph/cheapest_flights_k_stops_bf.rs"

[[example]]
name = "network_delay_time"
path = "examples/graph/network_delay_time.rs"

[[example]]
name = "decode_string"
path = "examples/strings_parsing_stacks/decode_string.rs"

[[example]]
name = "longest_substring_without_repeating_characters"
path = "examples/strings_parsing_stacks/longest_substring_without_repeating_characters.rs"

[[example]]
name = "3sum"
path = "examples/arrays_twopointers_slidingwindow_intervals/3sum.rs"

[[example]]
name = "product_except_self"
path = "examples/arrays_twopointers_slidingwindow_intervals/product_except_self.rs"

[[example]]
name = "subarray_sum_equals"
path = "examples/arrays_twopointers_slidingwindow_intervals/subarray_sum_equals.rs"

[[example]]
name = "merge_intervals"
path = "examples/arrays_twopointers_slidingwindow_intervals/merge_intervals.rs"

[[example]]
name = "meeting_rooms_2"
path = "examples/arrays_twopointers_slidingwindow_intervals/meeting_rooms_2.rs"

[[example]]
name = "sliding_window_maximum"
path = "examples/arrays_twopointers_slidingwindow_intervals/sliding_window_maximum.rs"

[[example]]
name = "basic_calculator"
path = "examples/arrays_twopointers_slidingwindow_intervals/basic_calculator.rs"



