[package]
name = "dsa"
version = "0.1.0"
edition = "2024"

[dependencies]

[[example]]
name = "rotting_oranges"
path = "examples/graph/rotting_oranges.rs"

[[example]]
name = "course_schedule_topo"
path = "examples/graph/course_schedule_topo.rs"

[[example]]
name = "course_schedule_dfs"
path = "examples/graph/course_schedule_dfs.rs"

[[example]]
name = "word_ladder"
path = "examples/graph/word_ladder.rs"

[[example]]
name = "alien_dictionary"
path = "examples/graph/alien_dictionary.rs"

[[example]]
name = "evaluate_division"
path = "examples/graph/evaluate_division.rs"

[[example]]
name = "accounts_merge"
path = "examples/graph/accounts_merge.rs"

[[example]]
name = "cheapest_flights_k_stops_dijkstra"
path = "examples/graph/cheapest_flights_k_stops_dijkstra.rs"

[[example]]
name = "cheapest_flights_k_stops_bf"
path = "examples/graph/cheapest_flights_k_stops_bf.rs"

[[example]]
name = "network_delay_time"
path = "examples/graph/network_delay_time.rs"

[[example]]
name = "decode_string"
path = "examples/strings_parsing_stacks/decode_string.rs"

[[example]]
name = "longest_substring_without_repeating_characters"
path = "examples/longest_substring_without_repeating_characters.rs"

[[example]]
name = "3sum"
path = "examples/3sum.rs"

[[example]]
name = "product_except_self"
path = "examples/product_except_self.rs"

[[example]]
name = "subarray_sum_equals_k"
path = "examples/subarray_sum_equals_k.rs"

[[example]]
name = "meeting_rooms_2"
path = "examples/arrays_twopointers_slidingwindow_intervals/meeting_rooms_2.rs"

[[example]]
name = "sliding_window_maximum"
path = "examples/arrays_twopointers_slidingwindow_intervals/sliding_window_maximum.rs"

[[example]]
name = "basic_calculator"
path = "examples/arrays_twopointers_slidingwindow_intervals/basic_calculator.rs"

[[example]]
name = "max_subarray"

[[example]]
name = "daily_temperatures"

[[example]]
name = "search_rotated_array"

[[example]]
name = "koko_eating_bananas"

[[example]]
name = "reorder_list"

[[example]]
name = "binary_tree_level_order_traversal"

[[example]]
name = "validate_bst"

[[example]]
name = "lca"

[[example]]
name = "number_of_islands"

[[example]]
name = "course_schedule_2"

[[example]]
name = "top_k_frequent"

[[example]]
name = "merge_intervals"

[[example]]
name = "subsets"

[[example]]
name = "coin_change"

[[example]]
name = "number_of_connected_components"

[[example]]
name = "testing"





